increase vsphere test timeout

--- a/test/e2e/prow.yaml
+++ b/test/e2e/prow.yaml
@@ -9159,6 +9159,8 @@ presubmits:
       env:
       - name: PROVIDER
         value: vsphere
+      - name: TEST_TIMEOUT
+        value: "120m"
       image: quay.io/kubermatic/build:go-1.20-node-18-8
       imagePullPolicy: Always
       name: ""
