--- a/addons/cluster-autoscaler/cluster-autoscaler.yaml
+++ b/addons/cluster-autoscaler/cluster-autoscaler.yaml
@@ -179,6 +179,7 @@ spec:
         args:
         - --cloud-provider=clusterapi
         - --namespace=kube-system
+        - --skip-nodes-with-local-storage={{ default "false" .Params.CLUSTER_AUTOSCALER_SKIP_LOCAL_STORAGE }}
         - --logtostderr=true
         - --stderrthreshold=info
         - --v=4
