Migrate to the community-hosted package repositories (`pkgs.k8s.io`) and to `dl.k8s.io` (#2873)
* Migrate to pkgs.k8s.io

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

* Migrate to dl.k8s.io

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

* Update fixtures

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

* Use release/v1.6 as a stable version for upgrade tests

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

* Use correct semver library

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

* Properly handle migration for older yum versions

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

---------

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/e2e/prow.yaml
+++ b/test/e2e/prow.yaml
@@ -1332,7 +1332,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1362,7 +1362,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1392,7 +1392,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1422,7 +1422,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1453,7 +1453,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1483,7 +1483,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1511,7 +1511,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1539,7 +1539,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1567,7 +1567,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1595,7 +1595,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1623,7 +1623,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1651,7 +1651,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1679,7 +1679,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1709,7 +1709,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1739,7 +1739,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1769,7 +1769,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1800,7 +1800,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1830,7 +1830,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
