--- a/test/e2e/prow.yaml
+++ b/test/e2e/prow.yaml
@@ -1420,7 +1420,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1448,7 +1448,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1476,7 +1476,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1504,7 +1504,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1532,7 +1532,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1560,7 +1560,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1588,7 +1588,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1618,7 +1618,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1648,7 +1648,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1678,7 +1678,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1709,7 +1709,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1739,7 +1739,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1767,7 +1767,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1795,7 +1795,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1823,7 +1823,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1851,7 +1851,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1879,7 +1879,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1907,7 +1907,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1935,7 +1935,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -1963,7 +1963,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9762,7 +9762,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9790,7 +9790,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9818,7 +9818,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9846,7 +9846,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9874,7 +9874,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9902,7 +9902,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9930,7 +9930,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9960,7 +9960,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -9990,7 +9990,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10020,7 +10020,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10051,7 +10051,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10081,7 +10081,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10109,7 +10109,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10137,7 +10137,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10165,7 +10165,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10193,7 +10193,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10221,7 +10221,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10249,7 +10249,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10277,7 +10277,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10305,7 +10305,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10333,7 +10333,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10361,7 +10361,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10389,7 +10389,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10417,7 +10417,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10445,7 +10445,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10473,7 +10473,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10501,7 +10501,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10529,7 +10529,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
@@ -10557,7 +10557,7 @@ presubmits:
   clone_uri: ssh://git@github.com/kubermatic/kubeone.git
   decorate: true
   extra_refs:
-  - base_ref: main
+  - base_ref: release/v1.6
     org: kubermatic
     path_alias: k8c.io/kubeone-stable
     repo: kubeone
