--- a/test/tests.yml
+++ b/test/tests.yml
@@ -198,6 +198,41 @@
     - name: vsphere_centos
     - name: vsphere_flatcar
 
+- scenario: upgrade_cilium_containerd
+  initVersion: v1.24.15
+  upgradedVersion: v1.25.11
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+
+- scenario: upgrade_cilium_containerd_external
+  initVersion: v1.24.15
+  upgradedVersion: v1.25.11
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
 - scenario: conformance_containerd
   initVersion: v1.24.15
   infrastructures:
