--- a/addons/csi-vmware-cloud-director/vcloud-basic-auth.yaml
+++ b/addons/csi-vmware-cloud-director/vcloud-basic-auth.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,4 +7,4 @@ metadata:
 data:
   username: {{ .Credentials.VCD_USER | b64enc }}
   password: {{ .Credentials.VCD_PASSWORD | b64enc }}
-  refreshToken: {{ .Credentials.VCD_API_TOKEN | b64enc }}
+  refreshToken: {{ default "" .Credentials.VCD_API_TOKEN | b64enc }}
