Add initial support for Kubernetes 1.28
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/tests.yml
+++ b/test/tests.yml
@@ -1,5 +1,5 @@
 - scenario: install_containerd
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -21,7 +21,7 @@
     - name: openstack_flatcar
 
 - scenario: install_containerd
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -38,7 +38,17 @@
     - name: gce_default
 
 - scenario: install_containerd
-  initVersion: v1.27.3
+  initVersion: v1.27.7
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+
+- scenario: install_containerd
+  initVersion: v1.28.3
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -48,8 +58,8 @@
     - name: gce_default
 
 - scenario: upgrade_containerd
-  initVersion: v1.26.6
-  upgradedVersion: v1.27.3
+  initVersion: v1.27.7
+  upgradedVersion: v1.28.3
   infrastructures:
     - name: azure_default_stable
     - name: azure_centos_stable
@@ -59,8 +69,19 @@
     - name: gce_default_stable
 
 - scenario: upgrade_containerd
-  initVersion: v1.25.11
-  upgradedVersion: v1.26.6
+  initVersion: v1.26.10
+  upgradedVersion: v1.27.7
+  infrastructures:
+    - name: azure_default_stable
+    - name: azure_centos_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: gce_default_stable
+
+- scenario: upgrade_containerd
+  initVersion: v1.25.15
+  upgradedVersion: v1.26.10
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_centos_stable
@@ -74,31 +95,19 @@
     - name: azure_rhel_stable
     - name: azure_rockylinux_stable
     - name: gce_default_stable
-
-- scenario: upgrade_containerd
-  initVersion: v1.24.15
-  upgradedVersion: v1.25.11
-  infrastructures:
-    - name: aws_amzn_stable
-    - name: aws_centos_stable
-    - name: aws_default_stable
-    - name: aws_flatcar_stable
-    - name: aws_rhel_stable
-    - name: aws_rockylinux_stable
-    - name: azure_default_stable
-    - name: azure_centos_stable
-    - name: azure_flatcar_stable
-    - name: azure_rhel_stable
-    - name: azure_rockylinux_stable
-    - name: gce_default_stable
-    - name: openstack_default_stable
-    - name: openstack_centos_stable
-    - name: openstack_rockylinux_stable
-    - name: openstack_rhel_stable
-    - name: openstack_flatcar_stable
 
 - scenario: calico_containerd
-  initVersion: v1.27.3
+  initVersion: v1.28.3
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+
+- scenario: calico_containerd
+  initVersion: v1.27.7
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -108,7 +117,7 @@
     - name: gce_default
 
 - scenario: calico_containerd_external
-  initVersion: v1.27.3
+  initVersion: v1.27.7
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -131,7 +140,17 @@
     - name: vsphere_flatcar
 
 - scenario: weave_containerd
-  initVersion: v1.27.3
+  initVersion: v1.28.3
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+
+- scenario: weave_containerd
+  initVersion: v1.27.7
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -141,7 +160,17 @@
     - name: gce_default
 
 - scenario: cilium_containerd
-  initVersion: v1.27.3
+  initVersion: v1.28.3
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+
+- scenario: cilium_containerd
+  initVersion: v1.27.7
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -151,7 +180,30 @@
     - name: gce_default
 
 - scenario: cilium_containerd_external
-  initVersion: v1.27.3
+  initVersion: v1.28.3
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: cilium_containerd_external
+  initVersion: v1.27.7
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -174,8 +226,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_cilium_containerd
-  initVersion: v1.24.15
-  upgradedVersion: v1.25.11
+  initVersion: v1.27.7
+  upgradedVersion: v1.28.3
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -185,8 +237,8 @@
     - name: gce_default
 
 - scenario: upgrade_cilium_containerd_external
-  initVersion: v1.24.15
-  upgradedVersion: v1.25.11
+  initVersion: v1.27.7
+  upgradedVersion: v1.28.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -209,37 +261,42 @@
     - name: vsphere_flatcar
 
 - scenario: conformance_containerd
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.27.3
+  initVersion: v1.27.7
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd_external
+  initVersion: v1.28.3
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: kube_proxy_ipvs_external
-  initVersion: v1.27.3
+  initVersion: v1.28.3
   infrastructures:
     - name: aws_default
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -260,7 +317,7 @@
     - name: openstack_flatcar
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -276,7 +333,17 @@
     - name: gce_default
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.27.3
+  initVersion: v1.27.7
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+
+- scenario: legacy_machine_controller_containerd
+  initVersion: v1.28.3
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -286,7 +353,7 @@
     - name: gce_default
 
 - scenario: csi_ccm_migration
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -306,7 +373,7 @@
     - name: azure_rockylinux
 
 - scenario: csi_ccm_migration
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -321,7 +388,16 @@
     - name: azure_rockylinux
 
 - scenario: csi_ccm_migration
-  initVersion: v1.27.3
+  initVersion: v1.27.7
+  infrastructures:
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+
+- scenario: csi_ccm_migration
+  initVersion: v1.28.3
   infrastructures:
     - name: azure_default
     - name: azure_centos
@@ -330,7 +406,7 @@
     - name: azure_rockylinux
 
 - scenario: install_containerd_external
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -363,7 +439,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -396,7 +472,41 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.27.3
+  initVersion: v1.27.7
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: install_containerd_external
+  initVersion: v1.28.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -430,8 +540,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.24.15
-  upgradedVersion: v1.25.11
+  initVersion: v1.25.15
+  upgradedVersion: v1.26.10
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_centos_stable
@@ -464,9 +574,8 @@
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.25.11
-  upgradedVersion: v1.26.6
-  initKubeOneVersion: "main"
+  initVersion: v1.26.10
+  upgradedVersion: v1.27.7
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_centos_stable
@@ -499,9 +608,8 @@
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.26.6
-  upgradedVersion: v1.27.3
-  initKubeOneVersion: "main"
+  initVersion: v1.27.7
+  upgradedVersion: v1.28.3
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_centos_stable
@@ -534,7 +642,7 @@
     - name: vsphere_flatcar_stable
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.25.11
+  initVersion: v1.25.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -567,7 +675,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.26.6
+  initVersion: v1.26.10
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -600,7 +708,40 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.27.3
+  initVersion: v1.27.7
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd_external
+  initVersion: v1.28.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
