Update Calico VXLAN to v3.26.3
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/addons/calico-vxlan/calico-vxlan.yaml
+++ b/addons/calico-vxlan/calico-vxlan.yaml
@@ -1,4 +1,4 @@
-# Source: https://raw.githubusercontent.com/projectcalico/calico/v3.26.1/manifests/calico-vxlan.yaml
+# Source: https://raw.githubusercontent.com/projectcalico/calico/v3.26.3/manifests/calico-vxlan.yaml
 ---
 # Source: calico/templates/calico-kube-controllers.yaml
 # This manifest creates a Pod Disruption Budget for Controller to allow K8s Cluster Autoscaler to evict
@@ -4648,6 +4648,7 @@ spec:
         # upgraded to use calico-ipam.
         - name: upgrade-ipam
           image: {{ .InternalImages.Get "CalicoVXLANCNI" }}
+          imagePullPolicy: IfNotPresent
           command: ["/opt/cni/bin/calico-ipam", "-upgrade"]
           envFrom:
           - configMapRef:
@@ -4675,6 +4676,7 @@ spec:
         # and CNI network config file on each node.
         - name: install-cni
           image: {{ .InternalImages.Get "CalicoVXLANCNI" }}
+          imagePullPolicy: IfNotPresent
           command: ["/opt/cni/bin/install"]
           envFrom:
           - configMapRef:
@@ -4717,6 +4719,7 @@ spec:
         # in best effort fashion, i.e. no failure for errors, to not disrupt pod creation in iptable mode.
         - name: "mount-bpffs"
           image: {{ .InternalImages.Get "CalicoVXLANNode" }}
+          imagePullPolicy: IfNotPresent
           command: ["calico-node", "-init", "-best-effort"]
           volumeMounts:
             - mountPath: /sys/fs
@@ -4742,6 +4745,7 @@ spec:
         # host.
         - name: calico-node
           image: {{ .InternalImages.Get "CalicoVXLANNode" }}
+          imagePullPolicy: IfNotPresent
           envFrom:
           - configMapRef:
               # Allow KUBERNETES_SERVICE_HOST and KUBERNETES_SERVICE_PORT to be overridden for eBPF mode.
@@ -4969,6 +4973,7 @@ spec:
       containers:
         - name: calico-kube-controllers
           image: {{ .InternalImages.Get "CalicoVXLANController" }}
+          imagePullPolicy: IfNotPresent
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
