fix strictArp field usage
Signed-off-by: Roman Dodin <dodin.roman@gmail.com>

--- a/pkg/apis/kubeone/config/testdata/config-full-v1beta1.yaml
+++ b/pkg/apis/kubeone/config/testdata/config-full-v1beta1.yaml
@@ -26,7 +26,7 @@ clusterNetwork:
       # * sed: shortest expected delay
       # * nq: never queue
       scheduler: rr
-      strictArp: false
+      strictARP: false
       tcpTimeout: "0"
       tcpFinTimeout: "0"
       udpTimeout: "0"
